# BIMConvertToGeo

./: CMakeLists.txt  README.md
data/inputData/: KIT.mtl  duplex.mtl  simple.mtl
data/intermediateData/: 16.obj.off  17.obj.off  18.obj.off  19.obj.off  1and2.obj.off  20.obj.off  21.obj.off  22.obj.off  23.obj.off  24.obj.off  25.obj.off  26.obj.off  27.obj.off  28.obj.off  29.obj.off  30.obj.off  31.obj.off  32.obj.off  32.off  33.obj.off  KIT.new.vertices.txt  KIT.repeated.faces.txt  minkowski_sum.obj.off  test.obj.off  union.obj.off
data/outputData/: KIT.new.faces.txt  KIT.repeated.vertices.txt  cube.city.json  mybuilding.ExcludeExterior.city.json  mybuilding.city.json  mybuilding.json  mybuilding_e.json
src/: LoadOBJ.hpp  Polyhedra.hpp  main.cpp
